2008-09-08  Sven Herzberg  <sven@imendio.com>

	Moved memory management for CacheNode into separate files; now we have
	two well-specified locations left for allocation and free of CacheNode

	* server/Makefile.am: build the new files, too
	* server/cache-node.c (cache_node_free), (cache_node_new): added new
	functions
	* server/cache-node.h: have the structure definition here; added
	declarations of the new functions
	* server/sapwood-server.c (process_buffer),
	(cleanup_pixmap_destroy): replace the code to create/free an object
	with proper function calls

2008-11-27  Sven Herzberg  <sven@imendio.com>

	Properly follow common memory management logic

	* engine/sapwood-style.c (enum_value_to_string): don't access stuff
	after freeing it; now we only leak memory (and only with debugging
	enabled), at least we don't access invalid memory anymore

2008-11-27  Sven Herzberg  <sven@imendio.com>

	Added some debug output; patch from Daniel Bormann

	* engine/sapwood-style.c (enum_value_to_string), (draw_hline),
	(draw_vline), (draw_shadow), (draw_arrow), (draw_diamond),
	(draw_string), (draw_box), (draw_flat_box), (draw_check),
	(draw_option), (draw_tab), (draw_shadow_gap), (draw_box_gap),
	(draw_expander), (draw_extension), (draw_focus), (draw_slider),
	(draw_handle), (draw_layout): added debug output

2008-11-21  Claudio Saavedra  <csaavedra@igalia.com>

	* === Release 3.1.1 ===

2008-11-07  Sven Herzberg  <sven@imendio.com>

	Fix struct field indentation

	* engine/sapwood-rc-style.h: properly align the stuff

2008-11-07  Sven Herzberg  <sven@imendio.com>

	NB#91010: shadowcolor option for labels
	Patch by Daniel Borgmann (danielb@openismus.com)

	* engine/sapwood-rc-style.c (theme_parse_shadowcolor),
	(sapwood_rc_style_parse), (sapwood_rc_style_merge):
	* engine/sapwood-rc-style.h:
	* engine/sapwood-style.c (draw_layout):
	* engine/theme-pixbuf.h:

2008-10-06  Claudio Saavedra  <csaavedra@igalia.com>

	* === Release 3.1.0 ===
